<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/iconeTelaInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_logo"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_balance_24" />

    <TextView
        android:id="@+id/textViewPergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="@string/qual_a_melhor_opcao_de_abastecimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconeTelaInicial" />

    <EditText
        android:id="@+id/editTextAlcool"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="none"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/valor_litro_do_alcool"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textViewPergunta"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextGasolina"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="none"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/valor_litro_da_gasolina"
        android:inputType="numberDecimal"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/editTextAlcool"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/yellow"
        android:text="@string/salvar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGasolina" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/green"
        android:text="@string/limpar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnCalcular"
        app:layout_constraintStart_toEndOf="@id/btnSalvar"
        app:layout_constraintTop_toBottomOf="@+id/editTextGasolina" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue"
        android:text="@string/calcular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"
        app:layout_constraintTop_toBottomOf="@+id/editTextGasolina" />

    <TextView
        android:id="@+id/textViewResposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/recyclerViewMinhaLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMinhaLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clipToPadding="false"
        android:padding="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResposta"/>

</androidx.constraintlayout.widget.ConstraintLayout>